--- a/s5_conclusion.tex
+++ b/s5_conclusion.tex
@@ -8,18 +8,18 @@
 In dieser Arbeit wurde die Umsetzung eines Browser basierten Frontend's für eine Suchmaschiene für radiologische Bilddaten gezeigt.
 Es wurden anhand von zwei gängigen Software-Produkten,
 zur Betrachtung von radiologischen Bilddaten die wichtigsten Anforderungen analysiert und mit der Erweiterung um die Suchfunktion als Webapplikation umgesetzt.
-Es wurde gezeigt dass es mit den aktuell verfügbaren Technologien und Frameworks ohne Probleme möglich ist,
+Es wurde gezeigt, dass es mit den aktuell verfügbaren Technologien und Frameworks ohne Probleme möglich ist,
 einen Betrachter radiologischer Bild-Daten für fast alle gängigen Browser zu implementieren.
 Weiters wurden zwei verschiedene Technologien zur Clientseitigen Nachbearbeitung der Bilder vorgestellt und auf ihre Performance getestet.
 Diese Tests zeigten dass diese Nachbearbeitung auf Basis von WebGl auf aktueller Hardware flüssig in Echzeit durchgeführt werden kann.
 
 Da die Anforderungen auf die Grundfunktionalität für einen Betrachter mit Suchfunktion limitiert waren,
 bietet die Webapplikation noch viele Potentiale zur Weiterentwicklung.
-Weitere Schritte währen zum einen die Implementierung der weiteren Features welche auch der JavaClient für KRESHMOI in der Radiologie-Version zur verfügung stellt.
+Weitere Schritte währen zum einen die Implementierung der weiteren Features welche auch der JavaClient für KRESHMOI in der Radiologie-Version zur Verfügung stellt.
 Zum anderen bieten die in dieser Arbeiten analysierten Programme zur Betrachtung von radiologischen Bilddaten noch viele weitere Features,
 wie 3D-Rendering welche sich ebenfalls in der Webapplikation umsetzen lassen.
 
-Für die Forschung und Lehre macht es durch aus Sinn ein System wie KRESMOI weiter zu Entwickeln und einfach als Webapplikation zugängich zu machen.
+Für die Forschung und Lehre macht es durch aus Sinn ein System wie KRESMOI weiter zu Entwickeln und einfach als Webapplikation zugänglich zu machen.
 Der Zugriff auf Daten und komlexere Systeme durch eine Webapplikation spiegelt auch einen aktuellen Trend in der IT wieder, 
 welcher einen Teil des \textit{Cloud Computing} Konzeptes ist.
 
